--- a/Server/evironment.yml
+++ b/Server/evironment.yml
@@ -2,12 +2,9 @@ name: example-environment
 
 dependencies:
   - python=3.4
-  - numpy
-  - toolz
-  - matplotlib
+  - requests
+  - robloxapi
+  - flask
   - dill
-  - pandas
-  - partd
-  - bokeh
   - pip:
     - git+https://github.com/blaze/dask.git#egg=dask[complete]
