--- a/environment.yml
+++ b/environment.yml
@@ -2,9 +2,15 @@ name: insert-cloud-environment
 
 dependencies:
   - python=3.4
+  - numpy
+  - toolz
+  - matplotlib
+  - dill
+  - pandas
+  - partd
+  - bokeh
   - requests
   - robloxapi
   - flask
-  - dill
   - pip:
     - git+https://github.com/blaze/dask.git#egg=dask[complete]
